--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "antd": "^5.7.0",
     "next": "13.4.9",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-ionicons": "^4.2.1",
+    "styled-components": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.4.1",
