--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-ionicons": "^4.2.1",
+    "react-query": "^3.39.3",
     "styled-components": "^6.0.3"
   },
   "devDependencies": {
