--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.7.0",
     "axios": "^1.4.0",
+    "jotai": "^2.2.2",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,6 +20,7 @@
     "styled-components": "^6.0.3"
   },
   "devDependencies": {
+    "@swc-jotai/react-refresh": "^0.0.8",
     "@types/node": "^20.4.1",
     "@types/react": "^18.2.14",
     "eslint": "8.44.0",
