--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "antd": "^5.7.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "jotai": "^2.2.2",
     "next": "13.4.9",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-ionicons": "^4.2.1",
     "react-query": "^3.39.3",
